@@ -1,4 +1,15 @@
+2009-02-24  John W. Eaton  <jwe@octave.org>
+
+	* configure.in: Copy Makefile to build directory if not building
+	in srcdir.
+
 2009-02-24  Thorsten Meyer  <thorsten@hexe>
+
+	* configure.in: AC_SUBST ac_config_files.
+	* Makeconf.in (config_opts): Define CONFIG_SUBDIRS variable.
+	* Makefile: Add make target for configuration files.
+	* octMakefile.in: Add make targets for configuration files,
+	config.status and configure.
 
 	* Makefile.in: Rename to Makefile.
 	* configure.in: Remove Makefile from list of autogenerated
